<resources>
    <string name="app_name">Idle Life</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="test">Test</string>

    <!-- Strings used naming buttons -->
    <string name="Will">Will</string>
    <string name="Intelligence">Int</string>
    <string name="Social">Social</string>
    <string name="Money">Money</string>
    <string name="Tests">Tests</string>
    <string name="LIVE">I LIVE</string>
    <string name="Ok">OK</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="textview">TextView</string>
    <string name="Percentage">%1$d%%</string>
    <string name="ConfirmationCheck">Are you sure you want to do that?</string>
    <string name="SwitchConfirmation">Change the current test to test %1$d?</string>
    <string name="AgeUpText">Age up? Cost: /n 100000</string>
    <string name="DescriptionText">You own: %1$d\n making: %2$s/s</string>


    <string name="Yes">Yep!</string>
    <string name="No">Nope!</string>
</resources>