<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background_grey"
    tools:context=".MainActivity"
    android:id="@+id/Main">

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:visibility="visible"
        app:layout_anchor="@+id/include"
        app:layout_anchorGravity="bottom"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/NavWill"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/tab_change_buttons"
                android:insetLeft="20dp"
                android:insetTop="20dp"
                android:insetRight="20dp"
                android:insetBottom="20dp"
                android:text="@string/Will"
                app:backgroundTint="@color/WillColour"
                app:elevation="0dp"
                app:rippleColor="#00FFFFFF" />

            <Button
                android:id="@+id/NavIntelligence"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/tab_change_buttons"
                android:insetLeft="20dp"
                android:insetTop="20dp"
                android:insetRight="20dp"
                android:insetBottom="20dp"
                android:text="@string/Intelligence"
                app:backgroundTint="@color/IntColour"
                app:rippleColor="#00FFFFFF" />

            <Button
                android:id="@+id/NavSocial"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/tab_change_buttons"
                android:insetLeft="20dp"
                android:insetTop="20dp"
                android:insetRight="20dp"
                android:insetBottom="20dp"
                android:text="@string/Social"
                app:backgroundTint="@color/SocialColour"
                app:rippleColor="#00FFFFFF" />

            <Button
                android:id="@+id/NavMoney"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/tab_change_buttons"
                android:fadeScrollbars="true"
                android:insetLeft="20dp"
                android:insetTop="20dp"
                android:insetRight="20dp"
                android:insetBottom="20dp"
                android:text="@string/Money"
                app:backgroundTint="@color/MoneyColour"
                app:rippleColor="#00FFFFFF" />

            <Button
                android:id="@+id/NavTests"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/tab_change_buttons"
                android:fadeScrollbars="true"
                android:insetLeft="20dp"
                android:insetTop="20dp"
                android:insetRight="20dp"
                android:insetBottom="20dp"
                android:text="@string/Tests"
                app:backgroundTint="@color/purple_500"
                app:rippleColor="#00FFFFFF" />
        </LinearLayout>
    </HorizontalScrollView>

    <include
        android:id="@+id/include"
        layout="@layout/content_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/Background_grey" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_anchor="@+id/include"
        app:layout_anchorGravity="center">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="122dp"
            android:layout_height="134dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/Will"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center|left"
                android:paddingLeft="2dp"
                android:text="0"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/Intelligence"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center|left"
                android:paddingLeft="2dp"
                android:text="idk 11"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/Social"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center|left"
                android:paddingLeft="2dp"
                android:text="3?"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/Money"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center|left"
                android:paddingLeft="2dp"
                android:text="2"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/Outlines"
                    android:layout_width="100dp"
                    android:layout_height="24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.14"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/grey_outlined_rectangle" />

                <ImageView
                    android:id="@+id/BlockColor"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@color/Darker_Grey"
                    app:layout_constraintBottom_toBottomOf="@+id/Outlines"
                    app:layout_constraintStart_toStartOf="@+id/Outlines"
                    app:layout_constraintTop_toTopOf="@+id/Outlines"
                    app:srcCompat="@drawable/filled_in_rectangle_drey" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/TopBlackLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.206"
            app:srcCompat="@drawable/thiccerline" />

        <ImageView
            android:id="@+id/BotBlackLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.863"
            app:srcCompat="@drawable/thiccerline" />

        <Button
            android:id="@+id/AgeUp"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:background="@drawable/age_up_thing"
            android:text="@string/AgeUpText"
            app:backgroundTint="@color/IntColour"
            app:layout_constraintBottom_toTopOf="@+id/BotBlackLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/playericon"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@+id/TopBlackLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/newchildplayericon4xtrim" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>